Wrap UsersList and fix dark theme accent hover color

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -12,7 +12,7 @@
   --bg-color: rgb(15, 15, 15);
   --text-color: white;
   --accent-color: rgba(46, 46, 46);
-  --accent-color-hover: rgba(128, 128, 128, 0.226);
+  --accent-color-hover: rgba(255, 255, 255, 0.8);
   --backdrop-filter: blur(0.5px) grayscale(50%);
   --backdrop-mix-blend-mode: difference;
   --rating-color: gold;
